completed UC9 and 10